Bug 280295 - Missing Translations in CSV Plugin
Summary: Missing Translations in CSV Plugin
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-17 20:00 UTC by allan
Modified: 2011-08-18 11:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description allan 2011-08-17 20:00:38 UTC
Version:           SVN trunk (using KDE 4.6.2) 
OS:                Linux

While helping the French translator with some queries, it dawned on me that a number of strings in investprocessing.cpp needed to be translated.  They are specimen/generic strings a broker/financial institution might choose to use to describe an investment activity type, such as 'buy' or 'purchase' etc. 

Fortunately, no-one seems to have noticed yet.

Reproducible: Didn't try

Steps to Reproduce:
DNA

Actual Results:  
no translation

Expected Results:  
translation

I'll get on to this now, but will later check further.
Comment 1 Jack 2011-08-17 20:42:57 UTC
There are known issues with translations for 4.6.  It turns out not all steps to get the translations done properly were followed, due to multiple reasons.  When we get closer to a schedule for the 4.6.1 release, we will work with the translation teams to assure all appropriate actions get triggered and nothing gets missed this time.
Comment 2 allan 2011-08-18 11:26:27 UTC
SVN commit 1247935 by allananderson:

BUG: 280295

A number of strings in investprocessing.cpp needed to be translated.  They are specimen/generic strings a broker/financial institution might choose to use to describe an investment activity type, such as 'buy' or 'purchase' etc.


 M  +12 -7     investprocessing.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1247935