BUG: 280295

A number of strings in investprocessing.cpp needed to be translated.  They are specimen/generic strings a broker/financial institution might choose to use to describe an investment activity type, such as 'buy' or 'purchase' etc.

svn path=/trunk/extragear/office/kmymoney/; revision=1247935