kmymoney/plugins/csvimport/investprocessing.cpp
@@ -137,14 +137,19 @@ void InvestProcessing::init()
   m_convertDat->setDateFormatIndex(m_dateFormatIndex);
   m_dateFormat = m_dateFormats[m_dateFormatIndex];
   m_csvDialog->button_import->setEnabled(false);
+  
+  //  The following string list strings are descriptions of possible investment
+  //  activity types.  Each of the lists may also contain alternative descriptions,
+  //  added by the user to the resource file, to suit his needs.
 
-  m_buyList += "buy";//                       some basic entries in case rc file missing
-  m_sellList += "sell";
-  m_divXList += "dividend";
-  m_reinvdivList += "reinv";
-  m_shrsinList += "add";
-  m_removeList += "remove";
-  m_brokerageList << "check" << "payment";
+  m_buyList += i18nc("verb", "buy");//                       some basic entries in case rc file missing
+  m_sellList += i18nc("verb", "sell");
+  m_divXList += i18nc("noun, cash dividend", "dividend");
+  m_reinvdivList += i18nc("verb, to reinvest", "reinvest");
+  m_shrsinList += i18nc("verb", "add");
+  m_removeList += i18nc("verb, to delete", "remove");
+  m_brokerageList << i18nc("noun, cheque, check", "check") << i18nc("noun", "payment");
+  
   findCodecs();//                             returns m_codecs = codecMap.values();
 }
 
